Revert "fix: replace Thread.currentThread().getId() with Thread.currentThread().threadId() for consistency (#2196)"
This reverts commit a7bfd27ff4bd95c67b59eabeb7781c786d5318e5.