@@ -203,7 +203,7 @@ public class TransactionContext implements Transaction {
   public void rollback() {
     LogManager.instance()
         .log(this, Level.FINE, "Rollback transaction newPages=%s modifiedPages=%s (threadId=%d)", newPages, modifiedPages,
-            Thread.currentThread().threadId());
+            Thread.currentThread().getId());
 
     if (database.isOpen() && database.getSchema().getDictionary() != null) {
       if (modifiedPages != null) {
@@ -615,7 +615,7 @@ public class TransactionContext implements Transaction {
 
       if (useWAL) {
         txId = database.getTransactionManager().getNextTransactionId();
-        //LogManager.instance().log(this, Level.FINE, "Creating buffer for TX %d (threadId=%d)", txId, Thread.currentThread().threadId());
+        //LogManager.instance().log(this, Level.FINE, "Creating buffer for TX %d (threadId=%d)", txId, Thread.currentThread().getId());
         result = database.getTransactionManager().createTransactionBuffer(txId, pages);
       }
 
@@ -626,7 +626,7 @@ public class TransactionContext implements Transaction {
       throw e;
     } catch (final Exception e) {
       LogManager.instance()
-          .log(this, Level.FINE, "Unknown exception during commit (threadId=%d)", e, Thread.currentThread().threadId());
+          .log(this, Level.FINE, "Unknown exception during commit (threadId=%d)", e, Thread.currentThread().getId());
       rollback();
       throw new TransactionException("Transaction error on commit", e);
     }
@@ -653,7 +653,7 @@ public class TransactionContext implements Transaction {
       // UPDATE PAGE COUNTER FIRST
       LogManager.instance()
           .log(this, Level.FINE, "TX committing pages newPages=%s modifiedPages=%s (threadId=%d)", newPages, modifiedPages,
-              Thread.currentThread().threadId());
+              Thread.currentThread().getId());
 
       database.getPageManager().updatePages(newPages, modifiedPages, asyncFlush);
 
@@ -689,7 +689,7 @@ public class TransactionContext implements Transaction {
       throw e;
     } catch (final Exception e) {
       LogManager.instance()
-          .log(this, Level.FINE, "Unknown exception during commit (threadId=%d)", e, Thread.currentThread().threadId());
+          .log(this, Level.FINE, "Unknown exception during commit (threadId=%d)", e, Thread.currentThread().getId());
       throw new TransactionException("Transaction error on commit", e);
     } finally {
       reset();
