@@ -1059,7 +1059,7 @@ public class LSMTreeIndexTest extends TestHelper {
                   if (threadInserted % 1000 == 0)
                     LogManager.instance()
                         .log(this, Level.INFO, "%s Thread %d inserted record %s, total %d records with key %d (total=%d)", null,
-                            getClass(), Thread.currentThread().threadId(), v.getIdentity(), i, threadInserted,
+                            getClass(), Thread.currentThread().getId(), v.getIdentity(), i, threadInserted,
                             crossThreadsInserted.get());
 
                   keyPresent = true;
@@ -1074,7 +1074,7 @@ public class LSMTreeIndexTest extends TestHelper {
                   assertThat(database.isTransactionActive()).isFalse();
                 } catch (final Exception e) {
                   LogManager.instance()
-                      .log(this, Level.SEVERE, "%s Thread %d Generic Exception", e, getClass(), Thread.currentThread().threadId());
+                      .log(this, Level.SEVERE, "%s Thread %d Generic Exception", e, getClass(), Thread.currentThread().getId());
                   assertThat(database.isTransactionActive()).isFalse();
                   return;
                 }
@@ -1083,16 +1083,16 @@ public class LSMTreeIndexTest extends TestHelper {
               if (!keyPresent)
                 LogManager.instance()
                     .log(this, Level.WARNING, "%s Thread %d Cannot create key %d after %d retries! (total=%d)", null, getClass(),
-                        Thread.currentThread().threadId(), i, maxRetries, crossThreadsInserted.get());
+                        Thread.currentThread().getId(), i, maxRetries, crossThreadsInserted.get());
 
             }
 
             LogManager.instance()
-                .log(this, Level.INFO, "%s Thread %d completed (inserted=%d)", null, getClass(), Thread.currentThread().threadId(),
+                .log(this, Level.INFO, "%s Thread %d completed (inserted=%d)", null, getClass(), Thread.currentThread().getId(),
                     threadInserted);
 
           } catch (final Exception e) {
-            LogManager.instance().log(this, Level.SEVERE, "%s Thread %d Error", e, getClass(), Thread.currentThread().threadId());
+            LogManager.instance().log(this, Level.SEVERE, "%s Thread %d Error", e, getClass(), Thread.currentThread().getId());
           }
         }
 
